Add notification dto to api
